@@ -1,11 +1,11 @@
 package com.sap.olingo.jpa.metadata.core.edm.mapper.impl;
 
-import static com.sap.olingo.jpa.metadata.core.edm.mapper.exception.ODataJPAModelException.MessageKeys.INVALID_TOP_LEVEL_SETTING;
-
+import java.lang.annotation.Annotation;
 import java.lang.reflect.AnnotatedElement;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -13,17 +13,8 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
-import javax.persistence.IdClass;
-import javax.persistence.Table;
-import javax.persistence.metamodel.EmbeddableType;
-import javax.persistence.metamodel.EntityType;
-import javax.persistence.metamodel.IdentifiableType;
-import javax.persistence.metamodel.ManagedType;
-import javax.persistence.metamodel.MappedSuperclassType;
-import javax.persistence.metamodel.Type;
 
 import org.apache.olingo.commons.api.edm.provider.CsdlAbstractEdmItem;
 import org.apache.olingo.commons.api.edm.provider.CsdlAnnotation;
@@ -32,10 +23,10 @@ import org.apache.olingo.commons.api.edm.provider.CsdlProperty;
 import org.apache.olingo.commons.api.edm.provider.CsdlPropertyRef;
 import org.apache.olingo.server.api.uri.UriResourceProperty;
 
-import com.sap.olingo.jpa.metadata.core.edm.annotation.EdmAsEntitySet;
 import com.sap.olingo.jpa.metadata.core.edm.annotation.EdmEntityType;
 import com.sap.olingo.jpa.metadata.core.edm.annotation.EdmQueryExtensionProvider;
 import com.sap.olingo.jpa.metadata.core.edm.annotation.EdmTopLevelElementRepresentation;
+import com.sap.olingo.jpa.metadata.core.edm.extension.vocabularies.Applicability;
 import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAAttribute;
 import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPACollectionAttribute;
 import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAEdmNameBuilder;
@@ -45,6 +36,15 @@ import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAQueryExtension;
 import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAStructuredType;
 import com.sap.olingo.jpa.metadata.core.edm.mapper.exception.ODataJPAModelException;
 import com.sap.olingo.jpa.metadata.core.edm.mapper.extension.IntermediateEntityTypeAccess;
+
+import jakarta.persistence.IdClass;
+import jakarta.persistence.Table;
+import jakarta.persistence.metamodel.EmbeddableType;
+import jakarta.persistence.metamodel.EntityType;
+import jakarta.persistence.metamodel.IdentifiableType;
+import jakarta.persistence.metamodel.ManagedType;
+import jakarta.persistence.metamodel.MappedSuperclassType;
+import jakarta.persistence.metamodel.Type;
 
 /**
  * <a href=
@@ -57,6 +57,7 @@ import com.sap.olingo.jpa.metadata.core.edm.mapper.extension.IntermediateEntityT
  */
 final class IntermediateEntityType<T> extends IntermediateStructuredType<T> implements JPAEntityType,
     IntermediateEntityTypeAccess {
+
   private Optional<JPAPath> etagPath;
   private Optional<Optional<JPAQueryExtension<EdmQueryExtensionProvider>>> extensionQueryProvider;
   private List<JPAAttribute> keyAttributes;
@@ -81,10 +82,14 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
   }
 
   @Override
+  public CsdlAnnotation getAnnotation(final String alias, final String term) throws ODataJPAModelException {
+    buildEdmTypeIfEmpty();
+    return filterAnnotation(alias, term);
+  }
+
+  @Override
   public Optional<JPAAttribute> getAttribute(final String internalName) throws ODataJPAModelException {
-    if (edmStructuralType == null) {
-      lazyBuildEdmItem();
-    }
+    buildEdmTypeIfEmpty();
     final Optional<JPAAttribute> a = super.getAttribute(internalName);
     if (a.isPresent())
       return a;
@@ -93,9 +98,7 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
 
   @Override
   public Optional<JPAAttribute> getAttribute(final UriResourceProperty uriResourceItem) throws ODataJPAModelException {
-    if (edmStructuralType == null) {
-      lazyBuildEdmItem();
-    }
+    buildEdmTypeIfEmpty();
     final Optional<JPAAttribute> a = super.getAttribute(uriResourceItem);
     if (a.isPresent())
       return a;
@@ -105,8 +108,8 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
   @Override
   public JPACollectionAttribute getCollectionAttribute(final String externalName) throws ODataJPAModelException {
     final JPAPath path = getPath(externalName);
-    if (path != null && path.getLeaf() instanceof JPACollectionAttribute)
-      return (JPACollectionAttribute) path.getLeaf();
+    if (path != null && path.getLeaf() instanceof final JPACollectionAttribute collectionAttribute)
+      return collectionAttribute;
     return null;
   }
 
@@ -143,16 +146,19 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
 
   @Override
   public List<JPAAttribute> getKey() throws ODataJPAModelException {
-    if (edmStructuralType == null) {
+    if (!hasBuildStepPerformed(PROPERTY_BUILD)) {
+      // Properties need to be present otherwise they have to be build
       lazyBuildEdmItem();
     }
     if (keyAttributes == null) {
       final List<JPAAttribute> intermediateKey = new ArrayList<>(); // Cycle break
-      addKeyAttribute(intermediateKey, this.getTypeClass().getDeclaredFields());
-      addKeyAttribute(intermediateKey, mappedSuperclass
+      addKeyAttribute(intermediateKey, Arrays.asList(this.getTypeClass().getDeclaredFields()));
+      addKeyAttribute(intermediateKey, mappedSuperclass.stream()
           .map(ManagedType::getJavaType)
           .map(Class::getDeclaredFields)
-          .orElse(new Field[] {}));
+          .flatMap(Arrays::stream)
+          .toList());
+
       final IntermediateStructuredType<?> baseType = getBaseType();
       if (baseType != null) {
         intermediateKey.addAll(((IntermediateEntityType<?>) baseType).getKey());
@@ -164,11 +170,9 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
 
   @Override
   public List<JPAPath> getKeyPath() throws ODataJPAModelException {
-    if (edmStructuralType == null) {
-      lazyBuildEdmItem();
-    }
+    buildEdmTypeIfEmpty();
     final List<JPAPath> result = new ArrayList<>();
-    for (final Entry<String, IntermediateProperty> property : this.declaredPropertiesList.entrySet()) {
+    for (final Entry<String, IntermediateProperty> property : this.declaredPropertiesMap.entrySet()) {
       final JPAAttribute attribute = property.getValue();
       if (attribute instanceof IntermediateEmbeddedIdProperty) {
         result.add(intermediatePathMap.get(attribute.getExternalName()));
@@ -225,15 +229,15 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
   @Override
   public String getTableName() {
     final AnnotatedElement a = jpaManagedType.getJavaType();
-    Table t = null;
+    Table table = null;
 
     if (a != null)
-      t = a.getAnnotation(Table.class);
+      table = a.getAnnotation(Table.class);
     final IntermediateStructuredType<?> baseType = getBaseType();
-    if (t == null && baseType != null)
+    if (table == null && baseType != null)
       return ((IntermediateEntityType<?>) baseType).getTableName();
-    return (t == null) ? jpaManagedType.getJavaType().getSimpleName().toUpperCase(Locale.ENGLISH)
-        : buildFQTableName(t.schema(), t.name());
+    return (table == null) ? jpaManagedType.getJavaType().getSimpleName().toUpperCase(Locale.ENGLISH)
+        : buildFQTableName(table.schema(), table.name());
   }
 
   @Override
@@ -245,17 +249,13 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
 
   @Override
   public boolean hasEtag() throws ODataJPAModelException {
-    if (edmStructuralType == null) {
-      lazyBuildEdmItem();
-    }
+    buildEdmTypeIfEmpty();
     return etagPath.isPresent();
   }
 
   @Override
   public boolean hasStream() throws ODataJPAModelException {
-    if (edmStructuralType == null) {
-      lazyBuildEdmItem();
-    }
+    buildEdmTypeIfEmpty();
     return this.determineHasStream();
   }
 
@@ -272,10 +272,9 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
   @Override
   public List<JPAPath> searchChildPath(final JPAPath selectItemPath) {
     final List<JPAPath> result = new ArrayList<>();
-    for (final Entry<String, JPAPathImpl> path : this.resolvedPathMap.entrySet()) {
-      final JPAPath p = path.getValue();
-      if (!p.ignore() && p.getAlias().startsWith(selectItemPath.getAlias()))
-        result.add(p);
+    for (final JPAPath path : this.resolvedPathMap.values()) {
+      if (!path.ignore() && path.getAlias().startsWith(selectItemPath.getAlias()))
+        result.add(path);
     }
     return result;
   }
@@ -283,20 +282,19 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
   @SuppressWarnings("unchecked")
   @Override
   protected <I extends CsdlAbstractEdmItem> List<I> extractEdmModelElements(
-      final Map<String, ? extends IntermediateModelElement> mappingBuffer)
+      final Map<?, ? extends IntermediateModelElement> mappingBuffer)
       throws ODataJPAModelException {
 
     final List<I> extractionTarget = new ArrayList<>();
-    for (final Entry<String, ? extends IntermediateModelElement> element : mappingBuffer.entrySet()) {
-      if (!element.getValue().ignore()
+    for (final IntermediateModelElement element : mappingBuffer.values()) {
+      if (!element.ignore()
           // Skip Streams
-          && !(element.getValue() instanceof IntermediateSimpleProperty &&
-              ((IntermediateSimpleProperty) element.getValue()).isStream())) {
-        if (element.getValue() instanceof IntermediateEmbeddedIdProperty) {
-          extractionTarget.addAll((Collection<? extends I>) resolveEmbeddedId(
-              (IntermediateEmbeddedIdProperty) element.getValue()));
-        } else {
-          extractionTarget.add((I) element.getValue().getEdmItem());
+          && !(element instanceof final IntermediateSimpleProperty simpleProperty
+              && simpleProperty.isStream())) {
+        if (element instanceof final IntermediateEmbeddedIdProperty embeddedId) {
+          extractionTarget.addAll((Collection<? extends I>) resolveEmbeddedId(embeddedId));
+       } else {
+          extractionTarget.add((I) element.getEdmItem());
         }
       }
     }
@@ -307,23 +305,23 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
   protected synchronized void lazyBuildEdmItem() throws ODataJPAModelException {
     if (edmStructuralType == null) {
       buildPropertyList();
-      buildNaviPropertyList();
+      buildNavigationPropertyList();
       addTransientProperties();
+      addVirtualProperties();
       determineExtensionQueryProvide();
       postProcessor.processEntityType(this);
-
+      retrieveAnnotations(this, Applicability.ENTITY_TYPE);
       edmStructuralType = new CsdlEntityType();
       edmStructuralType.setName(getExternalName());
-      edmStructuralType.setProperties(extractEdmModelElements(declaredPropertiesList));
+      edmStructuralType.setProperties(extractEdmModelElements(declaredPropertiesMap));
       edmStructuralType.setNavigationProperties(extractEdmModelElements(
-          declaredNaviPropertiesList));
+          declaredNavigationPropertiesMap));
       ((CsdlEntityType) edmStructuralType).setKey(extractEdmKeyElements());
       edmStructuralType.setAbstract(determineAbstract());
       edmStructuralType.setBaseType(determineBaseType());
       ((CsdlEntityType) edmStructuralType).setHasStream(determineHasStream());
       edmStructuralType.setAnnotations(determineAnnotations());
       determineHasEtag();
-      checkTopLevelTypeConsistency();
       checkPropertyConsistency(); //
       // TODO determine OpenType
     }
@@ -350,19 +348,30 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
     return asTopLevelOnly;
   }
 
-  boolean dbEquals(final String dbCatalog, final String dbSchema, final String dbTableName) {
+  /**
+   *
+   * @param dbCatalog
+   * @param dbSchema
+   * @param dbTableName
+   * @return
+   */
+  boolean dbEquals(final String dbCatalog, final String dbSchema, @Nonnull final String dbTableName) {
     final AnnotatedElement a = jpaManagedType.getJavaType();
-    Table t = null;
+    Table table = null;
     if (a != null)
-      t = a.getAnnotation(Table.class);
-    if (t == null)
-      return (dbCatalog == null || dbCatalog.isEmpty())
-          && (dbSchema == null || dbSchema.isEmpty())
-          && dbTableName.equals(getTableName());
-    else
-      return dbCatalog.equals(t.catalog())
-          && dbSchema.equals(t.schema())
-          && dbTableName.equals(t.name());
+      table = a.getAnnotation(Table.class);
+    if (table == null) {
+      if (dbSchema != null && !dbSchema.isEmpty()) {
+        return getTableName().equals(buildFQTableName(dbSchema, dbTableName));
+      } else {
+        return (dbCatalog == null || dbCatalog.isEmpty())
+            && (dbSchema == null || dbSchema.isEmpty())
+            && dbTableName.equals(getTableName());
+      }
+    } else
+      return table.catalog().equals(dbCatalog)
+          && table.schema().equals(dbSchema)
+          && table.name().equals(dbTableName);
   }
 
   boolean determineAbstract() {
@@ -382,25 +391,23 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
 
     return getKey().stream()
         .map(this::asPropertyRef)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
   CsdlEntityType getEdmItem() throws ODataJPAModelException {
-    if (edmStructuralType == null) {
-      lazyBuildEdmItem();
-    }
+    buildEdmTypeIfEmpty();
     return (CsdlEntityType) edmStructuralType;
   }
 
-  Optional<MappedSuperclassType<? super T>> getMappedSuperType() {
+  List<MappedSuperclassType<? super T>> getMappedSuperType() {
     return mappedSuperclass;
   }
 
-  private void addKeyAttribute(final List<JPAAttribute> intermediateKey, final Field[] keyFields)
+  private void addKeyAttribute(final List<JPAAttribute> intermediateKey, final List<Field> keyFields)
       throws ODataJPAModelException {
-    for (int i = 0; i < keyFields.length; i++) {
-      final JPAAttribute attribute = this.declaredPropertiesList.get(keyFields[i].getName());
+    for (final Field candidate : keyFields) {
+      final JPAAttribute attribute = this.declaredPropertiesMap.get(candidate.getName());
       if (attribute != null && attribute.isKey()) {
         if (attribute.isComplex()) {
           intermediateKey.addAll(buildEmbeddedIdKey(attribute));
@@ -418,6 +425,12 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
     return keyElement;
   }
 
+  private void buildEdmTypeIfEmpty() throws ODataJPAModelException {
+    if (edmStructuralType == null) {
+      lazyBuildEdmItem();
+    }
+  }
+
   private List<JPAAttribute> buildEmbeddedIdKey(final JPAAttribute attribute) throws ODataJPAModelException {
 
     final JPAStructuredType id = ((IntermediateEmbeddedIdProperty) attribute).getStructuredType();
@@ -429,25 +442,16 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
     return keyElements;
   }
 
-  private void checkTopLevelTypeConsistency() throws ODataJPAModelException {
-    final EdmAsEntitySet jpaAsEntitySet = this.jpaManagedType.getJavaType().getAnnotation(EdmAsEntitySet.class);
-    final EdmEntityType jpaEntityType = this.jpaManagedType.getJavaType().getAnnotation(EdmEntityType.class);
-    if (jpaAsEntitySet != null && jpaEntityType != null)
-      throw new ODataJPAModelException(INVALID_TOP_LEVEL_SETTING, getInternalName());
-  }
-
   private List<CsdlAnnotation> determineAnnotations() throws ODataJPAModelException {
     getAnnotations(edmAnnotations, this.jpaManagedType.getJavaType(), internalName);
     return edmAnnotations;
   }
 
   private boolean determineAsEntitySet() {
-    final EdmAsEntitySet jpaAsEntitySet = this.jpaManagedType.getJavaType().getAnnotation(EdmAsEntitySet.class);
-    final EdmEntityType jpaEntityType = this.jpaManagedType.getJavaType().getAnnotation(EdmEntityType.class);
-    return jpaAsEntitySet != null
-        || jpaEntityType == null
-        || jpaEntityType.as() == EdmTopLevelElementRepresentation.AS_ENTITY_SET
-        || jpaEntityType.as() == EdmTopLevelElementRepresentation.AS_ENTITY_SET_ONLY;
+    final Optional<EdmEntityType> jpaEntityType = getAnnotation(jpaJavaType, EdmEntityType.class);
+    return !jpaEntityType.isPresent()
+        || jpaEntityType.get().as() == EdmTopLevelElementRepresentation.AS_ENTITY_SET
+        || jpaEntityType.get().as() == EdmTopLevelElementRepresentation.AS_ENTITY_SET_ONLY;
   }
 
   private boolean determineAsSingleton() {
@@ -457,22 +461,20 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
   }
 
   private boolean determineAsTopLevelOnly() {
-    final EdmAsEntitySet jpaAsEntitySet = this.jpaManagedType.getJavaType().getAnnotation(EdmAsEntitySet.class);
-    final EdmEntityType jpaEntityType = this.jpaManagedType.getJavaType().getAnnotation(EdmEntityType.class);
-    return jpaAsEntitySet != null
-        || (jpaEntityType != null
-            && (jpaEntityType.as() == EdmTopLevelElementRepresentation.AS_ENTITY_SET_ONLY
-                || jpaEntityType.as() == EdmTopLevelElementRepresentation.AS_SINGLETON_ONLY));
+    final Optional<EdmEntityType> jpaEntityType = getAnnotation(jpaJavaType, EdmEntityType.class);
+    return (jpaEntityType.isPresent()
+        && (jpaEntityType.get().as() == EdmTopLevelElementRepresentation.AS_ENTITY_SET_ONLY
+            || jpaEntityType.get().as() == EdmTopLevelElementRepresentation.AS_SINGLETON_ONLY));
   }
 
   @SuppressWarnings("unchecked")
   private Optional<JPAQueryExtension<EdmQueryExtensionProvider>> determineExtensionQueryProvide()
       throws ODataJPAModelException {
     extensionQueryProvider = Optional.of(Optional.empty());
-    final EdmEntityType jpaEntityType = this.jpaManagedType.getJavaType().getAnnotation(EdmEntityType.class);
-    if (jpaEntityType != null) {
+    final Optional<EdmEntityType> jpaEntityType = getAnnotation(jpaJavaType, EdmEntityType.class);
+    if (jpaEntityType.isPresent()) {
       final Class<EdmQueryExtensionProvider> provider = (Class<EdmQueryExtensionProvider>) jpaEntityType
-          .extensionProvider();
+          .get().extensionProvider();
       final Class<?> defaultProvider = EdmQueryExtensionProvider.class;
       if (provider != null && provider != defaultProvider)
         extensionQueryProvider = Optional.of(Optional.of(new JPAQueryExtensionProvider<>(
@@ -484,13 +486,17 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
   }
 
   private void determineHasEtag() throws ODataJPAModelException {
-    for (final Entry<String, IntermediateProperty> property : this.declaredPropertiesList.entrySet()) {
+    for (final Entry<String, IntermediateProperty> property : this.declaredPropertiesMap.entrySet()) {
       if (property.getValue().isEtag()) {
         etagPath = Optional.of(getPath(property.getValue().getExternalName(), false));
       }
     }
     if (getBaseType() instanceof IntermediateEntityType)
       etagPath = Optional.ofNullable(((IntermediateEntityType<?>) getBaseType()).getEtagPath());
+  }
+
+  private <A extends Annotation> Optional<A> getAnnotation(final Class<?> annotated, final Class<A> type) {
+    return Optional.ofNullable(annotated.getAnnotation(type));
   }
 
   private Optional<JPAAttribute> getKey(final String internalName) throws ODataJPAModelException {
@@ -511,9 +517,9 @@ final class IntermediateEntityType<T> extends IntermediateStructuredType<T> impl
     return Optional.empty();
   }
 
+  @SuppressWarnings("unchecked")
   private List<CsdlProperty> resolveEmbeddedId(final IntermediateEmbeddedIdProperty embeddedId)
       throws ODataJPAModelException {
-    return ((IntermediateComplexType<?>) embeddedId.getStructuredType()).getEdmItem().getProperties();
+    return ((IntermediateStructuredType<T>) embeddedId.getStructuredType()).getEdmItem().getProperties();
   }
-
 }
