@@ -10,15 +10,14 @@ import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-import javax.persistence.Tuple;
-import javax.persistence.TypedQuery;
-import javax.persistence.criteria.CriteriaQuery;
-import javax.persistence.criteria.Expression;
-import javax.persistence.criteria.From;
-import javax.persistence.criteria.Selection;
-import javax.persistence.criteria.Subquery;
+import jakarta.persistence.Tuple;
+import jakarta.persistence.TypedQuery;
+import jakarta.persistence.criteria.CriteriaQuery;
+import jakarta.persistence.criteria.Expression;
+import jakarta.persistence.criteria.From;
+import jakarta.persistence.criteria.Selection;
+import jakarta.persistence.criteria.Subquery;
 
 import org.apache.olingo.commons.api.ex.ODataException;
 import org.apache.olingo.commons.api.http.HttpStatusCode;
@@ -32,6 +31,7 @@ import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAPath;
 import com.sap.olingo.jpa.metadata.core.edm.mapper.exception.ODataJPAModelException;
 import com.sap.olingo.jpa.processor.cb.ProcessorCriteriaQuery;
 import com.sap.olingo.jpa.processor.core.api.JPAODataRequestContextAccess;
+import com.sap.olingo.jpa.processor.core.api.JPAServiceDebugger.JPARuntimeMeasurement;
 import com.sap.olingo.jpa.processor.core.exception.ODataJPAQueryException;
 
 /**
@@ -53,17 +53,14 @@ public final class JPAExpandSubCountQuery extends JPAAbstractExpandQuery {
   private static List<JPANavigationPropertyInfo> copyHops(final List<JPANavigationPropertyInfo> hops) {
     return hops.stream()
         .map(JPANavigationPropertyInfo::new)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
   public JPAExpandQueryResult execute() throws ODataApplicationException {
-    final int handle = debugger.startRuntimeMeasurement(this, "execute");
-    try {
+    try (JPARuntimeMeasurement measurement = debugger.newMeasurement(this, "execute")) {
       //
       return null;
-    } finally {
-      debugger.stopRuntimeMeasurement(handle);
     }
   }
 
@@ -85,11 +82,11 @@ public final class JPAExpandSubCountQuery extends JPAAbstractExpandQuery {
     return item.hops.get(item.hops.size() - 2).getAssociationPath();
   }
 
-  private Expression<Boolean> createExpandWhere(final JPANavigationPropertyInfo naviInfo)
+  private Expression<Boolean> createExpandWhere(final JPANavigationPropertyInfo navigationInfo)
       throws ODataApplicationException {
 
     try {
-      return naviInfo.getFilterCompiler().compile();
+      return navigationInfo.getFilterCompiler().compile();
     } catch (final ExpressionVisitException e) {
       throw new ODataJPAQueryException(ODataJPAQueryException.MessageKeys.QUERY_PREPARATION_FILTER_ERROR,
           HttpStatusCode.BAD_REQUEST, e);
@@ -110,10 +107,10 @@ public final class JPAExpandSubCountQuery extends JPAAbstractExpandQuery {
 
   @Override
   final Map<String, Long> count() throws ODataApplicationException {
-    final int handle = debugger.startRuntimeMeasurement(this, "count");
-    try {
+
+    try (JPARuntimeMeasurement measurement = debugger.newMeasurement(this, "count")) {
       if (countRequested(lastInfo)) {
-        final ProcessorCriteriaQuery<Tuple> tq = (ProcessorCriteriaQuery<Tuple>) cb.createTupleQuery();
+        final ProcessorCriteriaQuery<Tuple> tupleQuery = (ProcessorCriteriaQuery<Tuple>) cb.createTupleQuery();
         final LinkedList<JPAAbstractQuery> hops = new LinkedList<>();
         addFilterCompiler(lastInfo);
         hops.push(this);
@@ -125,46 +122,41 @@ public final class JPAExpandSubCountQuery extends JPAAbstractExpandQuery {
             hops.push(new JPAExpandFilterQuery(odata, requestContext, hop, parent, childAssociation));
           }
         }
-        Subquery<Object> sq = null;
+        Subquery<Object> subQuery = null;
         while (!hops.isEmpty() && hops.getFirst() instanceof JPAAbstractSubQuery) {
           final JPAAbstractSubQuery hop = (JPAAbstractSubQuery) hops.pop();
-          sq = hop.getSubQuery(sq);
+          subQuery = hop.getSubQuery(subQuery, null);
         }
-        createFromClause(emptyList(), emptyList(), tq, lastInfo);
+        createFromClause(emptyList(), emptyList(), tupleQuery, lastInfo);
         final List<Selection<?>> selectionPath = buildExpandJoinPath(root);
-        tq.multiselect(addCount(selectionPath));
-        tq.where(createWhere(sq, lastInfo));
-        tq.groupBy(buildExpandCountGroupBy(root));
-        final TypedQuery<Tuple> query = em.createQuery(tq);
+        tupleQuery.multiselect(addCount(selectionPath));
+        tupleQuery.where(createWhere(subQuery, lastInfo));
+        tupleQuery.groupBy(buildExpandCountGroupBy(root));
+        final TypedQuery<Tuple> query = em.createQuery(tupleQuery);
         final List<Tuple> intermediateResult = query.getResultList();
         return convertCountResult(intermediateResult);
       }
       return emptyMap();
     } catch (final ODataException | JPANoSelectionException e) {
       throw new ODataJPAQueryException(e, HttpStatusCode.INTERNAL_SERVER_ERROR);
-    } finally {
-      debugger.stopRuntimeMeasurement(handle);
     }
   }
 
-  private Expression<Boolean> createWhere(final Subquery<?> sq, final JPANavigationPropertyInfo naviInfo)
+  private Expression<Boolean> createWhere(final Subquery<?> subQuery, final JPANavigationPropertyInfo navigationInfo)
       throws ODataApplicationException {
-    final int handle = debugger.startRuntimeMeasurement(this, "createWhere");
 
-    try {
-      javax.persistence.criteria.Expression<Boolean> whereCondition = null;
+    try (JPARuntimeMeasurement measurement = debugger.newMeasurement(this, "createWhere")) {
+      jakarta.persistence.criteria.Expression<Boolean> whereCondition = null;
       // Given keys: Organizations('1')/Roles(...)
-      whereCondition = createWhereByKey(naviInfo.getFromClause(), naviInfo.getKeyPredicates(), naviInfo
-          .getEntityType());
-      whereCondition = addWhereClause(whereCondition, createWhereKeyIn(this.association, target, sq));
-      whereCondition = addWhereClause(whereCondition, createExpandWhere(naviInfo));
+      whereCondition = createWhereByKey(navigationInfo.getFromClause(), navigationInfo.getKeyPredicates(),
+          navigationInfo.getEntityType());
+      whereCondition = addWhereClause(whereCondition, createWhereKeyIn(this.association, target, subQuery));
+      whereCondition = addWhereClause(whereCondition, createExpandWhere(navigationInfo));
       whereCondition = addWhereClause(whereCondition, createProtectionWhere(claimsProvider));
       return whereCondition;
     } catch (final ODataJPAModelException e) {
       throw new ODataJPAQueryException(ODataJPAQueryException.MessageKeys.QUERY_PREPARATION_ERROR,
           HttpStatusCode.INTERNAL_SERVER_ERROR, e);
-    } finally {
-      debugger.stopRuntimeMeasurement(handle);
     }
   }
 }
